--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "@cummins/oicq": "^1.1.5",
-    "inquirer": "^8.2.4",
-    "node-fetch": "^2.6.5"
+    "inquirer": "^8.2.4"
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.1",
