--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "dependencies": {
     "@cummins/oicq": "^1.1.5",
-    "inquirer": "^8.2.4"
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "cron": "^2.1.0",
+    "express": "^4.18.1",
+    "inquirer": "^8.2.4",
+    "node-fetch": "^2.6.5",
+    "puppeteer": "^18.0.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/cron": "^2.0.0",
+    "@types/express": "^4.17.14",
     "@types/inquirer": "^8.2.1",
     "@types/node": "^17.0.36",
     "@types/node-fetch": "^2.6.2",
